la til kall på funksjon

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -44,7 +44,7 @@
     </tr>
   </table>
 
-  <button type="button" id="kjopBillett">Kjøp billett</button>
+  <button type="button" id="kjopBillett" onclick="validateAndLeggTilBillett()">Kjøp billett</button>
 </form>
 
 <h2>Alle billetter</h2>
