la til kall på funksjon la til muligheten å slette alle billettene fylte ut README.md

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Bestilling av kinobilletter</title>
-  <script type ="text/javascript" src="script.js"></script>
 </head>
 
 <body>
@@ -49,6 +48,8 @@
 
 <h2>Alle billetter</h2>
 <ul id="billettListe"></ul>
-<button type="button" id="slettAlleBilletter">Slett alle billettene</button>
+<button type="button" id="slettAlleBilletter" onclick="slettAlleBilletter()">Slett alle billettene</button>
+
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
